# simeis-project

./: .gitignore  Cargo.toml  Makefile  README.md  note
.github/: CODEOWNERS  Dockerfile  metrics.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: dependabot.yml  start_simeis_server.sh  workflow_automatisation_deployment.yml  workflow_check_todos.yml  workflows_PR_main.yml  workflows_check-todos.yml  workflows_check_quality.yml  workflows_code_coverage.yml  workflows_feature.yml  workflows_pr_except_main.yml  workflows_release copy.yml  workflows_release.yml  workflows_release_CD.yml  workflows_release_CI.yml
doc/: manual.typ
example/: client.py  client_opti.py  client_opti_offline.py  k81.json  k82.json  k83.json  ma.json  package-lock.json  package.json  watch_games.py
simeis-data/: Cargo.toml
simeis-data/src/: galaxy.rs  game.rs  player.rs  ship.rs  syslog.rs  tests.rs
simeis-data/src/galaxy/: planet.rs  scan.rs  station.rs
simeis-data/src/ship/: cargo.rs  navigation.rs  resources.rs  upgrade.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  main.rs
tests/: propertybased.py  test_robot.py  testrich.json
