[workspace]
resolver = "2"
members = ["simeis-data", "simeis-server"]

[workspace.dependencies]
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
base64 = "0.22.1"
tokio = { version = "*", features = ["time"] }
